# tetsudou

./: .gitignore  Cargo.toml  README.md  mirrors.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  upload-mirrors-kv.sh  upload-repos-kv.sh  worker-configuration.d.ts  wrangler.toml
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  upload-mirrors-kv.yml  upload-repos-kv.yml
repos/: README.md  terra39-source.json  terra39.json  terra40-source.json  terra40.json  terra41-extras-source.json  terra41-extras.json  terra41-mesa-source.json  terra41-mesa.json  terra41-nvidia-source.json  terra41-nvidia.json  terra41-source.json  terra41.json  terra42-extras-source.json  terra42-extras.json  terra42-mesa-source.json  terra42-mesa.json  terra42-nvidia-source.json  terra42-nvidia.json  terra42-source.json  terra42.json  terra43-extras-source.json  terra43-extras.json  terra43-mesa-source.json  terra43-mesa.json  terra43-nvidia-source.json  terra43-nvidia.json  terra43-source.json  terra43.json  terrael10-source.json  terrael10.json  terrarawhide-extras-source.json  terrarawhide-extras.json  terrarawhide-mesa-source.json  terrarawhide-mesa.json  terrarawhide-nvidia-source.json  terrarawhide-nvidia.json  terrarawhide-source.json  terrarawhide.json  um40-source.json  (+7 more)
src/: api.ts  index.ts  lib.rs  mirrors.rs
src/types/: metalink.ts  tetsudou.ts
src/utils/: math.ts  plausible.ts  selection.ts
