[package]
name = "tetsudou"
version = "0.1.0"
edition = "2021"
description = "Not your favourite mirrorlist and metalink generator"
license = "GPL-3.0+"
repository = "https://github.com/terrapkg/tetsudou"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.31"
itertools = "0.12.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.190"
worker = "0.0.18"

[profile.release]
lto = true
strip = true
codegen-units = 1
